Fix: toList()